bug fixed: navbar covered by slider; added English version template and index page

--- a/css/master.css
+++ b/css/master.css
@@ -25,6 +25,8 @@ ul {
 
 ul li {
   display: inline-block;
+  position: relative;
+  z-index: 99;
 }
 
 body {
